--- a/index.html
+++ b/index.html
@@ -1,32 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/journal/">Journal</a>
-        <a href="/poetry/">Poetry</a>
-        <a href="/photography/">Photography</a>
-        <a href="/art/">Art</a>
-        <a href="/media/">Media Reflections</a>
-    </nav>
+---
+layout: default
+---
 
-    <header>
-        <h1>Blog</h1>
-    </header>
+<header>
+    <h1>Blog</h1>
+</header>
 
-    <main class="grid">
-        <div><a href="/journal/"><h2>Journal</h2></a></div>
-        <div><a href="/poetry/"><h2>Poetry</h2></a></div>
-        <div><a href="/photography/"><h2>Photography</h2></a></div>
-        <div><a href="/art/"><h2>Art</h2></a></div>
-        <div class="full-width"><a href="/media/"><h2>Media Reflections</h2></a></div>
-    </main>
-</body>
-</html>
+<main>
+
+<section>
+    <h2>Recent Journal Entries</h2>
+    {% for post in site.journal limit:2 %}
+      <div>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p>{{ post.excerpt }}</p>
+      </div>
+    {% endfor %}
+</section>
+
+<section>
+    <h2>Recent Poems</h2>
+    {% for post in site.poetry limit:2 %}
+      <div>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p>{{ post.excerpt }}</p>
+      </div>
+    {% endfor %}
+</section>
+
+<section>
+    <h2>Photography</h2>
+    {% for post in site.photography limit:1 %}
+      <div>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+      </div>
+    {% endfor %}
+</section>
+
+<section>
+    <h2>Art</h2>
+    {% for post in site.art limit:1 %}
+      <div>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+      </div>
+    {% endfor %}
+</section>
+
+<section>
+    <h2>Media Reflections</h2>
+    {% for post in site.media limit:2 %}
+      <div>
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p>{{ post.excerpt }}</p>
+      </div>
+    {% endfor %}
+</section>
+
+</main>
