--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: silent hours
 
 <main>
 
+<div class="home-grid">
 <section>
   <h2><a href="/journal/index.html">Journal</a></h2>
   {% for post in site.journal limit:2 %}
@@ -63,5 +64,6 @@ title: silent hours
     </div>
   {% endfor %}
 </section>
+</div>
 
 </main>
