--- a/photography/index.html
+++ b/photography/index.html
@@ -3,7 +3,9 @@ layout: default
 title: Photography
 ---
 
-<main class="main-container">  
+<main class="main-container">
+    <h1>Photography</h1>
+  
     <div class="photo-grid">
       {% for post in site.photography %}
         <div class="photo-card">
