--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: silent hours
 ---
 
+<canvas id="lava-background"></canvas>
+
 <main>
 
 <div class="home-grid">
@@ -67,3 +69,66 @@ title: silent hours
 </div>
 
 </main>
+
+<script>
+// Lava Lamp Background
+
+const canvas = document.getElementById('lava-background');
+const ctx = canvas.getContext('2d');
+
+function resizeCanvas() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+resizeCanvas();
+window.addEventListener('resize', resizeCanvas);
+
+// Colors (earth tones)
+const colors = ["#A68C6D", "#C1A78E", "#9CADA3", "#D4C1A4", "#C8D3C5"];
+
+const blobs = Array.from({ length: 5 }).map(() => ({
+  x: Math.random() * canvas.width,
+  y: Math.random() * canvas.height,
+  r: 100 + Math.random() * 50,
+  dx: (Math.random() - 0.5) * 0.3,
+  dy: (Math.random() - 0.5) * 0.3,
+  color: colors[Math.floor(Math.random() * colors.length)]
+}));
+
+function drawBlobs() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+  blobs.forEach(blob => {
+    ctx.beginPath();
+    const gradient = ctx.createRadialGradient(blob.x, blob.y, blob.r * 0.5, blob.x, blob.y, blob.r);
+    gradient.addColorStop(0, blob.color);
+    gradient.addColorStop(1, "transparent");
+    ctx.fillStyle = gradient;
+    ctx.arc(blob.x, blob.y, blob.r, 0, Math.PI * 2);
+    ctx.fill();
+
+    blob.x += blob.dx;
+    blob.y += blob.dy;
+
+    if (blob.x < 0 || blob.x > canvas.width) blob.dx *= -1;
+    if (blob.y < 0 || blob.y > canvas.height) blob.dy *= -1;
+  });
+
+  requestAnimationFrame(drawBlobs);
+}
+
+drawBlobs();
+</script>
+
+<style>
+#lava-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+  background-color: #fffcf0; /* match your page bg */
+}
+</style>
