--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@ title: silent hours
 
 </main>
 
-<script>
-// Lava Lamp Background
 
+<script>
+// Get canvas and context
 const canvas = document.getElementById('lava-background');
 const ctx = canvas.getContext('2d');
 
+// Resize on load and resize
 function resizeCanvas() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
@@ -83,52 +84,77 @@ function resizeCanvas() {
 resizeCanvas();
 window.addEventListener('resize', resizeCanvas);
 
-// Colors (earth tones)
-const colors = ["#A68C6D", "#C1A78E", "#9CADA3", "#D4C1A4", "#C8D3C5"];
-
-const blobs = Array.from({ length: 5 }).map(() => ({
+// Setup blobs
+const blobs = Array.from({ length: 6 }).map(() => ({
   x: Math.random() * canvas.width,
   y: Math.random() * canvas.height,
-  r: 100 + Math.random() * 50,
-  dx: (Math.random() - 0.5) * 0.3,
-  dy: (Math.random() - 0.5) * 0.3,
-  color: colors[Math.floor(Math.random() * colors.length)]
+  baseR: 100 + Math.random() * 50,
+  r: 100,
+  dx: (Math.random() - 0.5) * 0.5,
+  dy: (Math.random() - 0.5) * 0.5,
+  wobblePhase: Math.random() * Math.PI * 2,
+  color: ["#C2B280", "#A1887F", "#D7CCC8", "#AAB7B8", "#D5C4A1"][Math.floor(Math.random() * 5)]
 }));
 
-function drawBlobs() {
+let time = 0;
+
+function draw() {
+  time += 0.005;
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+  // Draw each blob
   blobs.forEach(blob => {
-    ctx.beginPath();
-    const gradient = ctx.createRadialGradient(blob.x, blob.y, blob.r * 0.5, blob.x, blob.y, blob.r);
-    gradient.addColorStop(0, blob.color);
-    gradient.addColorStop(1, "transparent");
-    ctx.fillStyle = gradient;
-    ctx.arc(blob.x, blob.y, blob.r, 0, Math.PI * 2);
-    ctx.fill();
+    // Wobble the radius slightly
+    blob.r = blob.baseR + Math.sin(time * 2 + blob.wobblePhase) * 20;
 
+    // Move blobs
     blob.x += blob.dx;
     blob.y += blob.dy;
 
-    if (blob.x < 0 || blob.x > canvas.width) blob.dx *= -1;
-    if (blob.y < 0 || blob.y > canvas.height) blob.dy *= -1;
+    if (blob.x < -blob.r || blob.x > canvas.width + blob.r) blob.dx *= -1;
+    if (blob.y < -blob.r || blob.y > canvas.height + blob.r) blob.dy *= -1;
+
+    // Draw with cleaner gradient
+    const gradient = ctx.createRadialGradient(blob.x, blob.y, blob.r * 0.4, blob.x, blob.y, blob.r);
+    gradient.addColorStop(0, blob.color);
+    gradient.addColorStop(1, "rgba(255, 252, 240, 0)"); // fade to your background color
+
+    ctx.fillStyle = gradient;
+    ctx.beginPath();
+    ctx.arc(blob.x, blob.y, blob.r, 0, Math.PI * 2);
+    ctx.fill();
   });
 
-  requestAnimationFrame(drawBlobs);
+  drawGrain();
+
+  requestAnimationFrame(draw);
 }
 
-drawBlobs();
+// Add subtle grain texture
+function drawGrain() {
+  const grainDensity = 0.1;
+  const grainAlpha = 0.02;
+  const grainSize = 1.5;
+
+  for (let i = 0; i < canvas.width * canvas.height * grainDensity * 0.0001; i++) {
+    const x = Math.random() * canvas.width;
+    const y = Math.random() * canvas.height;
+    ctx.fillStyle = `rgba(0,0,0,${grainAlpha})`;
+    ctx.fillRect(x, y, grainSize, grainSize);
+  }
+}
+
+draw();
 </script>
 
 <style>
 #lava-background {
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
+  background-color: #fffcf0;
   pointer-events: none;
-  background-color: #fffcf0; /* match your page bg */
 }
 </style>
