--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@ title: silent hours
 
 
 <script>
-// Get canvas and context
 const canvas = document.getElementById('lava-background');
 const ctx = canvas.getContext('2d');
 
-// Resize on load and resize
+// Resize canvas
 function resizeCanvas() {
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
@@ -84,40 +83,67 @@ function resizeCanvas() {
 resizeCanvas();
 window.addEventListener('resize', resizeCanvas);
 
-// Setup blobs
+// Utility: convert HSL to RGBA
+function hslToRgba(h, s, l, a=1) {
+  h /= 360;
+  s /= 100;
+  l /= 100;
+  let r, g, b;
+  if(s === 0){
+    r = g = b = l; 
+  } else {
+    const hue2rgb = (p, q, t) => {
+      if(t < 0) t += 1;
+      if(t > 1) t -= 1;
+      if(t < 1/6) return p + (q - p) * 6 * t;
+      if(t < 1/2) return q;
+      if(t < 2/3) return p + (q - p) * (2/3 - t) * 6;
+      return p;
+    }
+    const q = l < 0.5 ? l * (1 + s) : (l + s) - (l * s);
+    const p = 2 * l - q;
+    r = hue2rgb(p, q, h + 1/3);
+    g = hue2rgb(p, q, h);
+    b = hue2rgb(p, q, h - 1/3);
+  }
+  return `rgba(${Math.round(r*255)},${Math.round(g*255)},${Math.round(b*255)},${a})`;
+}
+
+// Blobs
 const blobs = Array.from({ length: 6 }).map(() => ({
-  x: Math.random() * canvas.width,
-  y: Math.random() * canvas.height,
-  baseR: 100 + Math.random() * 50,
-  r: 100,
-  dx: (Math.random() - 0.5) * 0.5,
-  dy: (Math.random() - 0.5) * 0.5,
+  x: Math.random() * window.innerWidth,
+  y: Math.random() * window.innerHeight,
+  baseR: 150 + Math.random() * 80,
+  r: 150,
+  dx: (Math.random() - 0.5) * 0.3,
+  dy: (Math.random() - 0.5) * 0.3,
   wobblePhase: Math.random() * Math.PI * 2,
-  color: ["#C2B280", "#A1887F", "#D7CCC8", "#AAB7B8", "#D5C4A1"][Math.floor(Math.random() * 5)]
+  baseHue: 30 + Math.random() * 60, // earth tones ~ 30 to 90 degrees
 }));
 
 let time = 0;
 
 function draw() {
-  time += 0.005;
+  time += 0.003;
   ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-  // Draw each blob
-  blobs.forEach(blob => {
-    // Wobble the radius slightly
-    blob.r = blob.baseR + Math.sin(time * 2 + blob.wobblePhase) * 20;
+  ctx.globalCompositeOperation = "lighter";
+  ctx.filter = "blur(100px)";
 
-    // Move blobs
+  blobs.forEach(blob => {
+    blob.r = blob.baseR + Math.sin(time * 2 + blob.wobblePhase) * 30;
+
     blob.x += blob.dx;
     blob.y += blob.dy;
-
     if (blob.x < -blob.r || blob.x > canvas.width + blob.r) blob.dx *= -1;
     if (blob.y < -blob.r || blob.y > canvas.height + blob.r) blob.dy *= -1;
 
-    // Draw with cleaner gradient
-    const gradient = ctx.createRadialGradient(blob.x, blob.y, blob.r * 0.4, blob.x, blob.y, blob.r);
-    gradient.addColorStop(0, blob.color);
-    gradient.addColorStop(1, "rgba(255, 252, 240, 0)"); // fade to your background color
+    // Drift hue slowly over time (full cycle every ~200 seconds)
+    const hueShift = (time * 10 + blob.baseHue) % 360;
+
+    const gradient = ctx.createRadialGradient(blob.x, blob.y, blob.r * 0.1, blob.x, blob.y, blob.r);
+    gradient.addColorStop(0, hslToRgba(hueShift, 30, 70, 0.8)); // Soft warm tone
+    gradient.addColorStop(1, "rgba(255,252,240,0)");
 
     ctx.fillStyle = gradient;
     ctx.beginPath();
@@ -125,23 +151,10 @@ function draw() {
     ctx.fill();
   });
 
-  drawGrain();
+  ctx.filter = "none";
+  ctx.globalCompositeOperation = "source-over";
 
   requestAnimationFrame(draw);
-}
-
-// Add subtle grain texture
-function drawGrain() {
-  const grainDensity = 0.1;
-  const grainAlpha = 0.02;
-  const grainSize = 1.5;
-
-  for (let i = 0; i < canvas.width * canvas.height * grainDensity * 0.0001; i++) {
-    const x = Math.random() * canvas.width;
-    const y = Math.random() * canvas.height;
-    ctx.fillStyle = `rgba(0,0,0,${grainAlpha})`;
-    ctx.fillRect(x, y, grainSize, grainSize);
-  }
 }
 
 draw();
